--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ LinkedList.py
 __pycache__
 playground.py
 /LeetCodeMedium/tempCodeRunnerFile.py
+LeetCodeMedium/tempCodeRunnerFile.py
 ./tempCodeRunnerFile.py
 something.py
