--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
       "editor.background": "#ddd9d9"
     }
   },
-  "python.pythonPath": "/Library/Developer/CommandLineTools/usr/bin/python3"
+  "python.pythonPath": "/Library/Developer/CommandLineTools/usr/bin/python3",
+  "editor.fontSize": 13
 }
