--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ LeetCodeMedium/tempCodeRunnerFile.py
 ./tempCodeRunnerFile.py
 something.py
 /LeetCodeHard/tempCodeRunnerFile.py
+tempCodeRunnerFile.py
